# dataset_extraction_tools

./: .gitignore  README.md  pyproject.toml
src/core/: document_converter.py  instructor_extract_data.py  pipeline.py  with_evidence.py
src/dataset_extraction_tools/: __init__.py  convert.py  core.py  document_converter.py  extract.py  extractor.py  llama_extractor.py  schema_generator.py  utils.py  with_evidence.py
tests/ethord/: application_schema.json  ethord_schema.py  test.py
